2010-09-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/basename-lgpl.c: Imported.
	* grub-core/gnulib/basename.c: Likewise.
	* grub-core/gnulib/dirname-lgpl.c: Likewise.
	* grub-core/gnulib/dirname.c: Likewise.
	* grub-core/gnulib/dirname.h: Likewise.
	* grub-core/gnulib/stripslash.c: Likewise.

2010-09-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/error.c: Resynced.
	* grub-core/gnulib/getopt.c: Likewise.
	* grub-core/gnulib/getopt_int.h: Likewise.
	* grub-core/gnulib/regex.h: Likewise.
	* grub-core/gnulib/regex_internal.c: Likewise.
	* grub-core/gnulib/regex_internal.h: Likewise.

2010-09-15  Szymon Janc <szymon@janc.net.pl>

	* grub-core/lib/xzembed/xz_dec_stream.c (dec_main): Fix index and block
	CRC calculations and validity checks.
	* grub-core/lib/xzembed/xz_dec_stream.c (dec_index): Fix index CRC
	calculations.

2010-09-15  Szymon Janc <szymon@janc.net.pl>

	* grub-core/lib/xzembed/xz_dec_stream.c (xz_dec_end): Fix memory leak.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix incorrect echo options handling.
	Reported by: Yves Blusseau.

	* include/grub/command.h (grub_command_flags_t): New flags
	GRUB_COMMAND_ACCEPT_DASH and GRUB_COMMAND_OPTIONS_AT_START.
	* grub-core/lib/arg.c (grub_arg_parse): Handle new flags.
	* grub-core/commands/echo.c (GRUB_MOD_INIT): Use new flags.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/command.h (GRUB_COMMAND_FLAG_CMDLINE): Removed. All
	users updated.
	(GRUB_COMMAND_FLAG_MENU): Likewise.
	(GRUB_COMMAND_FLAG_BOTH): Likewise.
	(GRUB_COMMAND_FLAG_TITLE): Removed.
	(GRUB_COMMAND_FLAG_NO_ECHO): Likewise.
	(GRUB_COMMAND_FLAG_EXTCMD): Moved into enum.
	(GRUB_COMMAND_FLAG_DYNCMD): Likewise.
	(GRUB_COMMAND_FLAG_BLOCKS): Likewise.
	(grub_command_flags_t): New enum. All users updated.

2010-09-14  Seth Goldberg <seth.goldberg@oracle.com>

	Fix solaris compilation.

	* grub-core/Makefile.core.def (kernel): Include gnulib/error.c on emu.