@@ -1,0 +1,4 @@
+2010-09-15  Yves Blusseau  <blusseau@zetam.org>
+
+	* util/bash-completion.d/grub-completion.bash.in: Add function to get
+	completions from usage.
